# kizashi

./: .env.example  .gitignore  CLAUDE.md  Cluade.md  DEPLOY.md  README.md  pyproject.toml
.claude/agents/: explorer.md  implementer.md
kizashi/: __init__.py  agent_backend.py  agent_worker.py  chat.py  cli.py  config.py  daily.py  db.py  digest.py  doctor.py  enrich.py  filters.py  log.py  night.py  notifier.py  pool.py  report.py  rising.py  schema.py  selector.py  summarizer.py  usage.py  web.py
kizashi/collectors/: __init__.py  arxiv.py  base.py  github_trending.py  hackernews.py  hf_papers.py  qiita.py  reddit.py  reddit_rss.py  rss.py  x.py
kizashi/static/: index.html
scripts/: deploy.sh  kizashi-agent-worker.service  kizashi-web.service  kizashi.cron  push.sh  register-task.ps1  set-env.sh  setup-vps.sh
