[project]
name = "kizashi"
version = "0.1.0"
description = "AIトレンドを上流ソース(HN/Reddit/ArXiv)から収集する個人観測ツール"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.107.1",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "janome>=0.5.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.scripts]
kizashi = "kizashi.cli:main"
kizashi-report = "kizashi.report:main"
kizashi-enrich = "kizashi.enrich:main"
kizashi-daily = "kizashi.daily:main"
kizashi-pool = "kizashi.pool:main"
kizashi-web = "kizashi.web:main"
kizashi-rising = "kizashi.rising:main"
kizashi-agent-worker = "kizashi.agent_worker:main"

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kizashi"]
